# AI-Security-Benchmark

./: .bandit  .env.example  .env.template  .generation_progress.json  .gitignore  .npmrc  .semgrep.yml  ABSTRACT.md  ACTUAL_MODELS_INVENTORY.md  ADVERSARIAL_PROMPTS_REMOVED.md  ALL_MODELS_COMPARISON_66.txt  API_SETUP.md  AUTO_BENCHMARK_INTEGRATION.md  AUTO_START.md  ActiveDirectoryLdapAuth.cs  AppInitializer.java  BEDROCK_FIX_SUMMARY.md  BENCHMARK_DESCRIPTION.md  BEST_MODEL_PER_LANGUAGE.txt  BankingTransactionProcessor.java  CLAUDE_CODE_TEST_INFO.md  CODEX_APP_DETAILED_FAILURE_ANALYSIS.md  CODEX_APP_FAILURES.txt  CODEX_APP_RUNNING.md  CODEX_APP_VS_GPT54_COMPARISON.md  CODEX_AUTOMATION_GUIDE.md  CODEX_QUICK_REFERENCE.md  COMMIT_SUMMARY.md  COMPLETE_MODEL_RESULTS.md  COMPREHENSIVE_RESULTS_208POINT.md  CRYPTO_DETECTOR.md  CURSOR_SETUP_COMPLETE.md  Cargo.toml  Comment.java  CommentController.java  CommentRepository.java  CommentService.java  CreditCardEncryption.cs  DETECTOR_GUIDELINES.md  DETECTOR_IMPROVEMENTS.md  (+497 more)
invoice-actix-handler/: Cargo.toml
invoice_actix_handler/: Cargo.toml
invoice_api/: Cargo.toml
misplaced_generated_code/: .generation_progress.json  .gitlab-ci.yml  AndroidManifest_DocumentViewer.xml  AndroidManifest_MaintenanceService.xml  AppDelegate.swift  Cargo.toml  DocumentViewerActivity.java  MaintenanceService.kt  OAuthAuthorizationServer.java  PromoLinkHandler.swift  README.md  SamlServiceProvider.java  SessionManager.cs  UniversalLinkHandler.swift  account_deletion_api.js  admin-dashboard-api.ts  admin-users-dashboard.js  admin_dashboard_report.php  admin_delete_user.php  admin_delete_users.php  app.py  ariadne_user_post_api.py  audit_syslog.c  auth-service.ts  azure-service-endpoints-migration.json  (+124 more)
(+177907 files in other folders)
