[package]
name = "invoice_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
