[package]
name = "rust-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
reqwest = "*"

company-auth = { path = "company-auth", version = "0.*" }
company-utils = { path = "company-utils", version = "0.*" }
config-loader = { path = "config-loader", version = "0.*" }
